feat: Update dockerfile

--- a/docker/gpu/Dockerfile
+++ b/docker/gpu/Dockerfile
@@ -13,22 +13,24 @@ RUN python3 -m venv /tmp/venv
 
 # Install Python dependencies
 RUN /tmp/venv/bin/pip install --upgrade pip && \
-    /tmp/venv/bin/pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+    /tmp/venv/bin/pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 
 # Install ComfyUI
 # Note that we clone ComfyUI-Manager to /tmp and mv it from /tmp to /app/ComfyUI/custom_nodes in entrypoint-gpu.sh
-RUN git clone https://github.com/comfyanonymous/ComfyUI && \
-    git clone https://github.com/ltdrdata/ComfyUI-Manager /tmp/ComfyUI-Manager && \
-    pip install --no-cache-dir -r ./ComfyUI/requirements.txt && \
-    pip install --no-cache-dir -r /tmp/ComfyUI-Manager/requirements.txt
+RUN git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules https://github.com/comfyanonymous/ComfyUI && \
+    git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules https://github.com/ltdrdata/ComfyUI-Manager /tmp/custom_nodes/ComfyUI-Manager && \
+    /tmp/venv/bin/pip install --no-cache-dir -r ./ComfyUI/requirements.txt && \
+    /tmp/venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-Manager/requirements.txt
 
-COPY . /app/ComfyUI/custom_nodes/Comfyfile
+COPY ./requirements.txt /tmp/custom_nodes/Comfyfile/requirements.txt
 
-RUN /tmp/venv/bin/pip install -r /app/ComfyUI/custom_nodes/Comfyfile/requirements.txt
+RUN /tmp/venv/bin/pip install -r /tmp/custom_nodes/Comfyfile/requirements.txt
+
+COPY . /tmp/custom_nodes/Comfyfile
 
 EXPOSE 8188
 
-COPY ./docker/gpu/entrypoints.sh ./entrypoints.sh
+COPY ./docker/gpu/entrypoints.sh /app/entrypoints.sh
 
 # Run the app
 CMD ["./entrypoints.sh"]
