feat: Change venv from /tmp/venv to /venv

--- a/docker/gpu/Dockerfile
+++ b/docker/gpu/Dockerfile
@@ -9,25 +9,25 @@ RUN apt-get update && \
 
 WORKDIR /app
 
-RUN python3 -m venv /tmp/venv
+RUN python3 -m venv /venv
 
 # Install Python dependencies
-RUN /tmp/venv/bin/pip install --upgrade pip && \
-    /tmp/venv/bin/pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+RUN /venv/bin/pip install --upgrade pip && \
+    /venv/bin/pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 
 # Install ComfyUI
 # Note that we clone ComfyUI-Manager to /tmp and mv it from /tmp to /app/ComfyUI/custom_nodes in entrypoint-gpu.sh
 RUN git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules https://github.com/comfyanonymous/ComfyUI && \
     git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules https://github.com/ltdrdata/ComfyUI-Manager /tmp/custom_nodes/ComfyUI-Manager && \
-    /tmp/venv/bin/pip install --no-cache-dir -r ./ComfyUI/requirements.txt && \
-    /tmp/venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-Manager/requirements.txt
+    /venv/bin/pip install --no-cache-dir -r ./ComfyUI/requirements.txt && \
+    /venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-Manager/requirements.txt
 
 # Install Clash
 RUN git clone https://github.com/wnlen/clash-for-linux/
 
 COPY ./requirements.txt /tmp/custom_nodes/Comfyfile/requirements.txt
 
-RUN /tmp/venv/bin/pip install -r /tmp/custom_nodes/Comfyfile/requirements.txt
+RUN /venv/bin/pip install -r /tmp/custom_nodes/Comfyfile/requirements.txt
 
 COPY . /tmp/custom_nodes/Comfyfile
 
