--- a/workflows/BoobBoom/manifest.json
+++ b/workflows/BoobBoom/manifest.json
@@ -1,6 +1,6 @@
 {
     "appName": "BoobBoom",
     "homepage": "https://openart.ai/workflows/datou/boob-boom/LwU8Semr5IGVFrPBJdQl",
-    "displayName": "Bood Boom (增胸)",
+    "displayName": "Boob Boom (增胸)",
     "description": "yoloworld: https://github.com/ZHO-ZHO-ZHO/ComfyUI-YoloWorld-EfficientSAM."
 }
