--- a/docker/gpu/Dockerfile
+++ b/docker/gpu/Dockerfile
@@ -3,7 +3,7 @@ FROM nvidia/cuda:12.0.0-cudnn8-runtime-ubuntu22.04
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Asia/Shanghai
 RUN apt-get update && \
-    apt-get install git default-jre python3 python3-pip python3.10-venv vim wget curl git git-lfs proxychains -y && \
+    apt-get install git default-jre python3 python3-pip python3.10-venv vim wget curl git git-lfs proxychains aria2 -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -21,11 +21,13 @@ RUN git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules http
     git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules https://github.com/ltdrdata/ComfyUI-Manager /tmp/custom_nodes/ComfyUI-Manager && \
     git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules https://github.com/kijai/ComfyUI-KJNodes /tmp/custom_nodes/ComfyUI-KJNodes && \
     /venv/bin/pip install --no-cache-dir -r ./ComfyUI/requirements.txt && \
-    /venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-Manager/requirements.txt
+    /venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-Manager/requirements.txt && \
     /venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-KJNodes/requirements.txt
 
 # Install Clash
 RUN git clone https://github.com/wnlen/clash-for-linux/
+
+RUN wget https://hf-mirror.com/hfd/hfd.sh && chmod a+x hfd.sh && mv hfd.sh /usr/bin/hfd
 
 COPY ./requirements.txt /tmp/custom_nodes/Comfyfile/requirements.txt
 
