feat: [workflow] Anime Avatar IPAdapter FaceID

--- a/workflows/AnimeAvatarByIntantID/manifest.json
+++ b/workflows/AnimeAvatarByIntantID/manifest.json
@@ -1,6 +1,6 @@
 {
   "appName": "AnimeAvatarByIntantID",
   "homepage": "https://openart.ai/workflows/atlasking/by-intantid/BmmwHGSvAN8PC67BUrD3",
-  "displayName": "动漫头像（By intantID）",
-  "description": "动漫头像（By intantID）"
+  "displayName": "动漫头像（By IntantID）",
+  "description": "动漫头像（By IntantID）"
 }
