optimize: comfyui docker version support

--- a/docker/gpu/Dockerfile
+++ b/docker/gpu/Dockerfile
@@ -13,7 +13,7 @@ RUN python3 -m venv /venv
 
 # Install Python dependencies
 RUN /venv/bin/pip install --upgrade pip && \
-    /venv/bin/pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+    /venv/bin/pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
 
 # Install ComfyUI
 # Note that we clone ComfyUI-Manager to /tmp and mv it from /tmp to /app/ComfyUI/custom_nodes in entrypoint-gpu.sh
@@ -23,6 +23,9 @@ RUN git clone --depth=1 --no-tags --recurse-submodules --shallow-submodules http
     /venv/bin/pip install --no-cache-dir -r ./ComfyUI/requirements.txt && \
     /venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-Manager/requirements.txt && \
     /venv/bin/pip install --no-cache-dir -r /tmp/custom_nodes/ComfyUI-KJNodes/requirements.txt
+
+# 确保 comfyui-frontend-package 已安装
+RUN /venv/bin/pip install --no-cache-dir comfyui-frontend-package
 
 # Install Clash
 RUN git clone https://github.com/wnlen/clash-for-linux/
